--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
     sdk: flutter
   another_telephony: ^0.4.1
   http: ^0.13.3
+  shared_preferences: ^2.0.15
+  connectivity_plus: ^2.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
